--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10882,3 +10882,11 @@ a.text-dark:focus {
   }
 }
 
+.bg-dark {
+  background-color: #00838f !important;
+}
+
+.bg-dark2 {
+  background-color: #006972;
+}
+
